[package]
name = "rsdsl_pppoe2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ppproperly = { git = "https://github.com/rsdsl/ppproperly.git", version = "0.1.0" }
rsdsl_pppoe2_sys = { git = "https://github.com/rsdsl/pppoe2.git", version = "0.1.0" }
thiserror = "1.0"
