[package]
name = "rsdsl_pppoe2_sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.147"
ppproperly = { git = "https://github.com/rsdsl/ppproperly.git", version = "0.1.0" }
socket2 = "0.5.3"
thiserror = "1.0"

[build-dependencies]
bindgen = "0.66.1"
cc = "1.0.79"
